<resources>
    <string name="app_name">Medicine Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_add_alarm">add</string>
    <string name="menu_view_medicines">all tasks</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_take_picture">take picture</string>
    <string name="button_date">Pick date</string>
    <string name="button_time">Pick time</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_picture">Scan</string>
    <string name="label_cancel">Cancel</string>
    <string name="email_hint">email@gmail.com</string>
    <string name="password_hint">***************</string>
    <string name="login_button_text">Login</string>
    <string name="register_heading">Register</string>
    <string name="register_button_text">Register</string>
    <string name="register_option_text">Don\'t have an account? Login</string>
    <string name="login_option_text">Already have an account? login</string>
</resources>